# authful-mcp-proxy

./: .coverage  .env.example  .gitignore  .markdownlint.json  BUILD_WINDOWS.md  CONTRIBUTING.md  README.md  README_BUILD.md  WINDOWS_USAGE.md  authful-mcp-proxy.spec  build_executable.sh  build_windows.bat  build_windows.sh  inspect.bat  pyproject.toml  pyvenv.cfg  run.bat  run_proxy.py
.claude/: settings.local.json
.github/workflows/: build-executable.yml  publish-test.yml  publish.yml  run-static.yml  run-tests.yml
examples/token_validating_mcp_backend/: .env.example  mcp_backend.py  run.bat
src/authful_mcp_proxy/: __init__.py  __main__.py  config.py  external_oidc.py  mcp_proxy.py
tests/: __init__.py  test_config.py  test_external_oidc.py  test_external_oidc_integration.py  test_main.py  test_mcp_proxy.py
